--- a/_INTERNAL_SPEAKER/readme
+++ b/_INTERNAL_SPEAKER/readme
@@ -1,6 +1,7 @@
 Internal Speaker Readme 
 
-1-bit music for the TRS80 model 4 computer. Converted to run on the model 4 from the ZX Specrtrum 1-bit music scene. Use PASMO and SJASMPLUS assemblers where required. Note: All audio is sent to the cassette port. Connect up an amplified speaker to the cassette port/jack/socket. Credits to the original creators: Shiru, Utz, Tim Follin, and others.
+1-bit music for the TRS80 model 4 computer. Converted to run on the model 4 from the ZX Specrtrum 1-bit music scene. 
+Use PASMO and SJASMPLUS assemblers where required.  Credits to the original creators: Shiru, Utz, Tim Follin, and others.
 
 .WAV, .CAS, .CMD files included. Tested in the 'TRS80GP' emulator. Not tested on real hardware.
 
