--- a/_INTERNAL_SPEAKER/readme
+++ b/_INTERNAL_SPEAKER/readme
@@ -3,7 +3,7 @@ Internal Speaker Readme
 1-bit music for the TRS80 model 4 computer. Converted to run on the model 4 from the ZX Specrtrum 1-bit music scene. 
 Use PASMO and SJASMPLUS assemblers where required.  Credits to the original creators: Shiru, Utz, Tim Follin, and others.
 
-.WAV, .CAS, .CMD files included. Tested in the 'TRS80GP' emulator. Not tested on real hardware.
+.WAV, .CAS, .CMD files included. Not tested at all, either in an emulator or yet on real hardware.
 
 TRS80-model4-1bit-music for the internal speaker.   TEST only - Dont know yet if these work on real hardware.
 All audio is sent to port 0x90 which, as far as I can find out, should be the real internal speaker in a model 4.  No idea on bits to send; at this stage am just assuming it will be the same as the cassette port being bits 0,1.
