--- a/_INTERNAL_SPEAKER/Earshaver_Album/readme
+++ b/_INTERNAL_SPEAKER/Earshaver_Album/readme
@@ -1,1 +1,5 @@
 Readme for Earshaver Album - Shiru.
+
+Earshaver 1-bit album by Shiru.
+
+Last four songs are not quite right; something isn't quite correct within the source for one particular engine, so they are out of tune a little bit. Sorry Shiru, Ive stuffed up here and requires a bit more work.
