--- a/_INTERNAL_SPEAKER/TRITONE/readme
+++ b/_INTERNAL_SPEAKER/TRITONE/readme
@@ -1,1 +1,7 @@
-Tritone readme is here.
+Tritone readme.
+
+Music tunes for the Tritone v2 Engine. Engine written by Shiru. Tunes written by various enthusiasts over the years. Brink, Shiru and others.
+
+Tested in TRS80GP emulator; All should work on real hardware with audio playing out through the internal speaker on the TRS80 model 4.
+
+
